# page-diff-monitor

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: APPLY_legacy.txt  README_FARM_SQLITE_BLOCKED.md  offline_tests_README.md  pipeline_cli_reference.txt  snapshot_from_cache_README.md
examples/: sample.jsonl
examples/patches/: defaults_browser_snippet.json  enable_ignore_by_domain_example.patch.json  enable_ignore_paths_example.patch.json  enable_strict_any.patch.json  enable_strict_by_domain.patch.json  example_site.patch.json  playwright_html_multi_domains.patch.json
examples/profiles/: _defaults.json  jsonplaceholder_posts_page.json  pokeapi_pokemon_next.json
src/web_farm/: __init__.py  block_detect.py  browser_engine.py  export_csv.py  extractors.py  gen_playwright_patches.py  html_extract.py  http_engine.py  http_utils.py  infer.py  json_path.py  keying.py  keying_suggest.py  offline_tests.py  onboard.py  pipeline_microscope_exact.py  profile_explain.py  profile_lint.py  profile_loader.py  resp_read.py  runtime.py  secret_store.py  site_patches.py  site_profile.py  storage_jsonl.py  storage_sqlite.py  tool_pipeline.py
src/web_farm/framework/: __init__.py  profile_loader.py  site_patches.py
tests/: conftest.py  test_auth_secretstore.py  test_export_csv.py  test_export_schema.py  test_html_parsing.py  test_keying_and_ids.py  test_site_patch_framework.py
tests/fixtures/pokeapi_pokemon/: page0.json
