[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "web-farm"
version = "0.1.0"
description = "Profile-driven web/API scraping pipeline with pagination, offline tests, and SQLite/JSONL storage."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31",
]

[project.optional-dependencies]
browser = ["playwright>=1.40"]

[project.scripts]
web-farm = "web_farm.tool_pipeline:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
